chg: graph de/serialize

--- a/n64/examples/hello_world/assets/box.glb.conf
+++ b/n64/examples/hello_world/assets/box.glb.conf
@@ -1,6 +1,5 @@
-{"format":0
-,"baseScale":16
-,"compression":0
-,"gltfBVH":false
-,"exclude":false
-}
+{"format":0,
+"baseScale":16,
+"compression":0,
+"gltfBVH":false,
+"exclude":false}
