--- a/n64/examples/hello_world/assets/DiscFrag.mp3.conf
+++ b/n64/examples/hello_world/assets/DiscFrag.mp3.conf
@@ -1,6 +1,5 @@
-{"format":0
-,"baseScale":0
-,"compression":0
-,"gltfBVH":false
-,"exclude":true
-}
+{"format":0,
+"baseScale":0,
+"compression":0,
+"gltfBVH":false,
+"exclude":true}
