--- a/n64/examples/hello_world/assets/crate00.ci8.png.conf
+++ b/n64/examples/hello_world/assets/crate00.ci8.png.conf
@@ -1,6 +1,5 @@
-{"format":3
-,"baseScale":0
-,"compression":3
-,"gltfBVH":false
-,"exclude":false
-}
+{"format":3,
+"baseScale":0,
+"compression":3,
+"gltfBVH":false,
+"exclude":false}
