--- a/n64/examples/hello_world/assets/env_gold.rgba16.png.conf
+++ b/n64/examples/hello_world/assets/env_gold.rgba16.png.conf
@@ -1,6 +1,5 @@
-{"format":0
-,"baseScale":0
-,"compression":2
-,"gltfBVH":false
-,"exclude":false
-}
+{"format":0,
+"baseScale":0,
+"compression":2,
+"gltfBVH":false,
+"exclude":false}
