--- a/n64/examples/hello_world/assets/model.glb.conf
+++ b/n64/examples/hello_world/assets/model.glb.conf
@@ -1,6 +1,5 @@
-{"format":0
-,"baseScale":0
-,"compression":3
-,"gltfBVH":true
-,"exclude":false
-}
+{"format":0,
+"baseScale":0,
+"compression":3,
+"gltfBVH":true,
+"exclude":false}
