--- a/n64/examples/hello_world/assets/unit1m.i8.png.conf
+++ b/n64/examples/hello_world/assets/unit1m.i8.png.conf
@@ -1,6 +1,5 @@
-{"format":6
-,"baseScale":0
-,"compression":2
-,"gltfBVH":false
-,"exclude":false
-}
+{"format":6,
+"baseScale":0,
+"compression":2,
+"gltfBVH":false,
+"exclude":false}
