chg: prefabs at runtime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,7 @@ add_executable(p64editor src/main.cpp
         src/build/audioBuilder.cpp
         src/project/component/types/compAudio2d.cpp
         src/editor/pages/parts/layerInspector.cpp
+        src/build/prefabBuilder.cpp
 )
 
 target_include_directories(p64editor PRIVATE
