--- a/n64/CMakeLists.txt
+++ b/n64/CMakeLists.txt
@@ -88,5 +88,6 @@ add_executable(n64_engine
         engine/src/debug/overlay.cpp
         engine/include/collision/attach.h
         engine/src/collision/attach.cpp
-        engine/include/lib/string.h
+        engine/src/scene/componentTable.cpp
+        engine/src/collision/scene.cpp
 )
