--- a/.github/workflows/editor.yml
+++ b/.github/workflows/editor.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build gcc g++ \
-            libx11-dev libxext-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxss-dev
+            libx11-dev libxext-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxss-dev libxtst-dev
 #            libwayland-dev libwayland-client-dev libwayland-cursor-dev libwayland-egl-dev
 
       - name: Configure CMake
