Exclude documentation from the build workflow

--- a/.github/workflows/editor.yml
+++ b/.github/workflows/editor.yml
@@ -3,7 +3,13 @@ name: Windows (MSYS2 UCRT64)
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**/*.md'
+      - 'docs/**'
   pull_request:
+    paths-ignore:
+      - '**/*.md'
+      - 'docs/**'
 
 jobs:
   build-windows:
